--- a/_config.yml
+++ b/_config.yml
@@ -16,39 +16,39 @@ lang: en
 prefer_datetime_locale:
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone:
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Ayush Koul                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: My Personal Portfolio   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  A site about me and showcasing some of my work
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: "https://ayushkoul00.github.io"
 
 github:
-  username: github_username             # change to your github username
+  username: AyushKoul00             # change to your github username
 
 twitter:
-  username: twitter_username            # change to your twitter username
+  username: ayushkoul00            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Ayush Koul
+  email: ayushkoul00@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://twitter.com/ayushkoul00      # change to your twitter homepage
+    - https://github.com/AyushKoul00      # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/ayushkoul00/
 
 google_site_verification:               # fill in to your verification string
 
@@ -110,7 +110,7 @@ comments:
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled:      # boolean, keep empty means false
+    enabled:     # boolean, keep empty means false
     # specify the Jekyll environment, empty means both
     # only works if `assets.self_host.enabled` is 'true'
     env:          # [development|production]
