--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # bundler cache
 _site
 vendor
+.jekyll-cache
 
 # rubygem
 *.gem
@@ -21,3 +22,4 @@ package-lock.json
 
 # my files
 run.bat
+.vscode
